--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <br><br>
 <h1>hello web!</h1>
 <h5>made by hong</h5>
-<h2><a href="0.html">HOME</a></h2>
+<h2><a href="index.html">HOME</a></h2><input type=box><input type=checkbox>
+
   <ol>
     <li><a href="1.html">introduction</a></li>
     <li><a href="2.html">blog</a></li>
@@ -25,7 +26,7 @@ reference video : <a href="https://www.youtube.com/user/egoing2" target=blank ti
   <iframe width="560" height="315" src="https://www.youtube.com/embed/tZooW6PritE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
   <p>
   <img src="coding.jpg" width="200">
-  <p>페이지가 모이면 책이 된다.
+<p>  <p>페이지가 모이면 책이 된다.
 </body>
 
 <div id="disqus_thread"></div>
