--- a/3.html
+++ b/3.html
@@ -9,7 +9,7 @@
 <br><br>
 <h1>hello web!</h1>
 <h5>made by hong</h5>
-  <h2><a href="0.html">HOME</a></h2>
+  <h2><a href="index.html">HOME</a></h2>
   <ol>
     <li><a href="1.html">introduction</a></li>
     <li><a href="2.html">blog</a></li>
